# conference_app

./: .env  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: alembic.ini  controllers.py  database.py  main.py  models.py  refresh_database.py  schemas.py  settings.py
app/mig/: env.py
app/mig/versions/: 00c5433d3654_update_relationships.py  adcbdddcca13_downgrade.py  c25acc3c3604_second_revision.py  e82c6da1eef1_first_revision.py
app/routers/: presentations.py  schedule.py  users.py
tests/: conftest.py  test_presentation.py  test_schedule.py  test_user.py
