[tool.poetry]
name = "testproject"
version = "0.1.0"
description = "API for presentations"
authors = ["Tarasov I.I."]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"
pydantic = "^2.9.2"
psycopg2 = "^2.9.10"
httpx = "^0.27.2"
pydantic-settings = "^2.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.dotenv]
ignore = "false"
location = ".env"
